<resources>
    <string name="app_name">CGS</string>
    <string name="title_activity_signin">Sign in</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Login">Login</string>
    <string name="Signup">Signup</string>
    <string name="title_activity_signup">Signup For CGS</string>
    <string name="UHint">username</string>
    <string name="PwHint">Password</string>
    <string name="CPw">Confirm Password</string>
    <string name="title_activity_main_content">MainContent</string>


    <string-array name="NavDrawerParts">
        <item>Class</item>
        <item>Subjects</item>
        <item>Students</item>
        <item>User Settings</item>
        <item>Logout</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="class_create">Create Class</string>
    <string name="class_Manage">Manage Class</string>
    <string name="class_edit">Edit Class</string>
    <string name="title_activity_main">CGS</string>
    <string name="Subj_add">Add Subject</string>
    <string name="Subj_Edit">Edit Subject</string>
    <string name="Students_add"> Add Students</string>
    <string name="Students_View"> View Student Masterlist</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Subj_code">Subject Code</string>
    <string name="Subj_title">Subject Description</string>
    <string name="General_save">Save</string>
    <string name="student_number">Student number</string>
    <string name="Student_name">Student name</string>
    <string name="create_class_select">Select Subject</string>
    <string name="create_class_subjcode">Subject Code</string>
    <string name="class_create_name">Class name</string>
    <string name="class_mng_studs">Manage Students</string>
    <string name="class_mng_criteria">Manage Criteria</string>
    <string name="class_critstat">100% divided over 0 criteria</string>
    <string name="class_studstats">there are currently 0 students</string>
    <string name="percentage">Percentage here (i.e. 45.5)</string>
    <string name="recCount">How many records for this?</string>
    <string name="Critname">Criterion Name</string>
    <string name="add_crit">Add Criterion</string>
    <string name="rem_crit">Remove Criterion</string>
</resources>
