<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="bsu.cgs.class_manage_criteria">

    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ListView android:id="@+id/critList" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView android:id="@+id/mtTv" android:layout_width="match_parent"
            android:layout_height="match_parent" android:gravity="center" />

    </RelativeLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/tbPercent"
        android:layout_below="@+id/tbCritName"
        android:layout_centerHorizontal="true"
        android:hint="@string/percentage" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/tbRecCount"
        android:layout_below="@+id/tbPercent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/recCount" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tbCritName"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/Critname" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_crit"
        android:id="@+id/btnAddCrit"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="98dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rem_crit"
        android:id="@+id/btnRemCrit"
        android:layout_above="@+id/btnCritSave"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/General_save"
        android:id="@+id/btnCritSave"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
