<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="bsu.cgs.Signin">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/usrNme"
        android:layout_alignParentTop="true"
        android:layout_marginTop="69dp"
        android:singleLine="false"
        android:maxLines="1"
        android:clickable="true"
        android:inputType="textMultiLine"
        android:lines="1"
        android:minLines="1"
        android:layout_centerHorizontal="true"
        android:hint="@string/UHint" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/usrPw"
        android:layout_below="@+id/usrNme"
        android:maxLines="1"
        android:layout_centerHorizontal="true"
        android:hint="@string/PwHint"
        android:layout_alignParentEnd="false" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:id="@+id/loginBtn"
        android:layout_below="@+id/usrPw"
        android:layout_centerHorizontal="true"
        android:onClick="sendMsgSignIn"
            />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Signup"
        android:id="@+id/signupBtn"
        android:layout_below="@+id/loginBtn"
        android:layout_centerHorizontal="true"
        android:onClick="sendMsgSignUp"

        />
</RelativeLayout>
