<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="bsu.cgs.Signup">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/usrSignup"
        android:layout_alignParentTop="true"
        android:layout_marginTop="69dp"
        android:singleLine="false"
        android:maxLines="1"
        android:clickable="true"
        android:inputType="textMultiLine"
        android:lines="1"
        android:minLines="1"
        android:layout_centerHorizontal="true"
        android:hint="@string/UHint" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/usrPwSup"
        android:layout_below="@+id/usrSignup"
        android:maxLines="1"
        android:layout_centerHorizontal="true"
        android:hint="@string/PwHint" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/usrPwCf"
        android:maxLines="1"
        android:layout_below="@+id/usrPwSup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/CPw" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Signup"
        android:id="@+id/signupBtn"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/usrPwCf"
        android:layout_alignParentLeft="true" />
</RelativeLayout>
